--- a/Caddyfile
+++ b/Caddyfile
@@ -1,4 +1,4 @@
-http://nua.media:80 {
+nua.media, http://nua.media {
     root /srv/webapp/current/public
     header / Cache-Control "max-age=86400"
     header / Content-Location "http://nua.media"
